--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: python
 python:
   - 3.5
+branches:
+  only:
+    - master
 install:
   - pip install sphinx sphinx_rtd_theme
 script: make html
