--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ branches:
   only:
     - master
 install:
-  - pip install sphinx sphinx_rtd_theme
+  - pip install -r requirements.txt
 script: make html
 after_success:
   - ./push.sh
